--- a/website/layouts/docs/baseof.html
+++ b/website/layouts/docs/baseof.html
@@ -7,6 +7,8 @@
     <header>
       {{ partial "navbar.html" . }}
     </header>
+    THIS_IS_THE_SPOT
+    {{ partial "announcement.html" . }}
     <div class="container-fluid td-outer">
       <div class="td-main">
         <div class="row flex-xl-nowrap">
